[package]
authors.workspace = true
description = "WebGPU trace player"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "player"
publish = false
repository.workspace = true
version.workspace = true

[lib]
name = "player"
path = "src/lib.rs"
test = false

[[bin]]
name = "play"
path = "src/bin/play.rs"
test = false

[dependencies]
env_logger.workspace = true
log.workspace = true
raw-window-handle.workspace = true
ron.workspace = true
winit = { workspace = true, optional = true }

[dependencies.wgt]
features = ["serde"]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgc]
features = [
    "dx12",
    "gles",
    "metal",
    "raw-window-handle",
    "replay",
    "strict_asserts",
    "vulkan",
    "wgsl",
]
workspace = true

[dev-dependencies]
serde.workspace = true
