[package]
name = "wgpu-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "common code for wgpu tests"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
autotests = false
publish = false

[[test]]
name = "gpu-tests"
path = "tests/gpu.rs"
harness = false

[[test]]
name = "cpu-tests"
path = "tests/cpu.rs"

[features]
webgl = ["wgpu/webgl"]

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
cfg-if.workspace = true
ctor.workspace = true
env_logger.workspace = true
futures-lite.workspace = true
heck.workspace = true
libtest-mimic.workspace = true
log.workspace = true
parking_lot.workspace = true
png.workspace = true
pollster.workspace = true
serde_json.workspace = true
serde.workspace = true
wgpu.workspace = true
wgpu-macros.workspace = true
wgt = { workspace = true, features = ["replay"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nv-flip.workspace = true
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
raw-window-handle.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true }

[dev-dependencies]
naga = { workspace = true, features = ["wgsl-in"] }
wasm-bindgen-test.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
image.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["CanvasRenderingContext2d", "Blob"] }
