[package]
authors.workspace = true
autotests = false
description = "common code for wgpu tests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wgpu-test"
publish = false
repository.workspace = true
version.workspace = true

[[test]]
harness = false
name = "wgpu-test"
path = "tests/root.rs"

[features]
webgl = ["wgpu/webgl"]

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
cfg-if.workspace = true
ctor.workspace = true
futures-lite.workspace = true
itertools.workspace = true
libtest-mimic.workspace = true
log.workspace = true
parking_lot.workspace = true
png.workspace = true
pollster.workspace = true
profiling.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
wgpu = { workspace = true, features = ["wgsl"] }
wgpu-macros.workspace = true
wgt = { workspace = true, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
nv-flip.workspace = true
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
image.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["Blob", "CanvasRenderingContext2d"] }
