[package]
name = "wgpu-bindings"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"

[features]
default = []

[dependencies]
#cbindgen = "0.6.7"
cbindgen = { git = "https://github.com/grovesNL/cbindgen", branch = "associated-constants"}
