[package]
authors.workspace = true
description = "A tool to print and process information about available wgpu adapters."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wgpu-info"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
env_logger.workspace = true
pico-args.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu = { workspace = true, features = ["serde"] }
