[package]
name = "wgpu-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Macros for wgpu"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
exclude = ["Cargo.lock"]
publish = false

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
quote = "1"
syn = { version = "2", features = ["full"] }
