[package]
authors.workspace = true
description = "Macros for wgpu"
edition.workspace = true
exclude = ["Cargo.lock"]
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wgpu-macros"
publish = false
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
quote = "1"
syn = { version = "2", features = ["full"] }
