[package]
name = "wgpu-native"
version = "0.4.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "WebGPU native implementation on gfx-hal"
homepage = "https://github.com/gfx-rs/wgpu"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
#metal-auto-capture = ["gfx-backend-metal/auto-capture"]
vulkan-portability = ["core/gfx-backend-vulkan"]

[dependencies.core]
path = "../wgpu-core"
package = "wgpu-core"
version = "0.1"

[dependencies.wgt]
path = "../wgpu-types"
package = "wgpu-types"
version = "0.1"

[dependencies]
arrayvec = "0.5"
lazy_static = "1.1"
parking_lot = "0.9"
raw-window-handle = "0.3"
libc = {version="0.2", features=[]}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
