[package]
name = "wgpu-remote"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []

[dependencies]
wgpu-native = { path = "../wgpu-native", version = "0.3", features = ["serde"] }
ipc-channel = "0.12"
log = "0.4"
parking_lot = { version = "0.9" }
serde = { version = "1.0", features = ["serde_derive"] }
